--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="page">
 
     <header class="header">
-      <img src="./images/logo_place_header.svg" class="logo logo__place_header" alt="Логотип ЯндексПрактикум">
+      <img src="./images/logo_place_header.svg" class="logo logo_place_header" alt="Логотип ЯндексПрактикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a></p>
       <img src="./images/header-image.png" class="header__main-illustration" alt="Опять двойка">
@@ -158,9 +158,9 @@
         <nav class="footer__columns footer__column_content_social">
           <ul class="footer__column-list">
               <li class="footer__column-item"><h2 class="footer__column-heading">Соцсети</h2></li>
-              <li class="footer__column-item"><a href="https://facebook.com" class="footer__column-links"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="логотип Фэйсбук"> Facebook</a>
-              <li class="footer__column-item"><a href="https://vk.com/" class="footer__column-links"><img src="./images/vk_color_white.svg" class="footer__social-icon" alt="логотип ВКонтакте"> ВКонтакте</a>
-              <li class="footer__column-item"><a href="https://instagram.com/" class="footer__column-links"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="логотип Инстаграм"> Instagram</a>
+              <li class="footer__column-item"><a href="https://facebook.com" class="footer__column-links"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="логотип Фэйсбук"> Facebook</a></li>
+              <li class="footer__column-item"><a href="https://vk.com/" class="footer__column-links"><img src="./images/vk_color_white.svg" class="footer__social-icon" alt="логотип ВКонтакте"> ВКонтакте</a></li>
+              <li class="footer__column-item"><a href="https://instagram.com/" class="footer__column-links"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="логотип Инстаграм"> Instagram</a></li>
           </ul>
         </nav>
 
