--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="научиться учиться Андрей Клонингер на Яндекс Практикуме">
   <meta name="keywords" content="html, css">
   <meta name="author" content="Андрей Клонингер">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -141,26 +141,26 @@
     <footer class="footer">
       <div class="footer__columns">
 
-        <div class="footer__columns footer__column_content_copyright">
-          <div class="logo logo__place_footer"></div>
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
           <p class="footer__author"> &COPY; 2020. Андрей Клонингер</p>
         </div>
 
-        <nav class="footer__columns footer__column_content_info">
-          <ul class="footer__column-list">
-              <li class="footer__column-item"><h2 class="footer__column-heading">О Практикуме</h2></li>
-              <li class="footer__column-item"><a href="https://praktikum.yandex.ru" class="footer__column-links">Главная</a></li>
-              <li class="footer__column-item"><a href="#" class="footer__column-links">Концепция</a></li>  
-              <li class="footer__column-item"><a href="https://praktikum.yandex.ru/promo/mentors-school" class="footer__column-links">Наставники</a></li>
+        <nav class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <ul class="footer__column-links">
+              <li><a href="https://praktikum.yandex.ru" class="footer__column-link">Главная</a></li>
+              <li><a href="#" class="footer__column-link">Концепция</a></li>
+              <li><a href="https://praktikum.yandex.ru/promo/mentors-school" class="footer__column-link">Наставники</a></li>
           </ul>
         </nav>
             
-        <nav class="footer__columns footer__column_content_social">
-          <ul class="footer__column-list">
-              <li class="footer__column-item"><h2 class="footer__column-heading">Соцсети</h2></li>
-              <li class="footer__column-item"><a href="https://facebook.com" class="footer__column-links"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="логотип Фэйсбук"> Facebook</a></li>
-              <li class="footer__column-item"><a href="https://vk.com/" class="footer__column-links"><img src="./images/vk_color_white.svg" class="footer__social-icon" alt="логотип ВКонтакте"> ВКонтакте</a></li>
-              <li class="footer__column-item"><a href="https://instagram.com/" class="footer__column-links"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="логотип Инстаграм"> Instagram</a></li>
+        <nav class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <ul class="footer__column-links">
+              <li><a href="https://facebook.com" class="footer__column-link"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="логотип Фэйсбук"> Facebook</a></li>
+              <li><a href="https://vk.com/" class="footer__column-link"><img src="./images/vk_color_white.svg" class="footer__social-icon" alt="логотип ВКонтакте"> ВКонтакте</a></li>
+              <li><a href="https://instagram.com/" class="footer__column-link"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="логотип Инстаграм"> Instagram</a></li>
           </ul>
         </nav>
 
