--- a/index.html
+++ b/index.html
@@ -149,18 +149,18 @@
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
-              <li><a href="https://praktikum.yandex.ru" class="footer__column-link">Главная</a></li>
-              <li><a href="#" class="footer__column-link">Концепция</a></li>
-              <li><a href="https://praktikum.yandex.ru/promo/mentors-school" class="footer__column-link">Наставники</a></li>
+              <li class="footer__column-item"><a href="https://praktikum.yandex.ru" class="footer__column-link">Главная</a></li>
+              <li class="footer__column-item"><a href="#" class="footer__column-link">Концепция</a></li>
+              <li class="footer__column-item"><a href="https://praktikum.yandex.ru/promo/mentors-school" class="footer__column-link">Наставники</a></li>
           </ul>
         </nav>
             
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
-              <li><a href="https://facebook.com" class="footer__column-link"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="логотип Фэйсбук"> Facebook</a></li>
-              <li><a href="https://vk.com/" class="footer__column-link"><img src="./images/vk_color_white.svg" class="footer__social-icon" alt="логотип ВКонтакте"> ВКонтакте</a></li>
-              <li><a href="https://instagram.com/" class="footer__column-link"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="логотип Инстаграм"> Instagram</a></li>
+              <li class="footer__column-item"><a href="https://facebook.com" class="footer__column-link"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="логотип Фэйсбук"> Facebook</a></li>
+              <li class="footer__column-item"><a href="https://vk.com/" class="footer__column-link"><img src="./images/vk_color_white.svg" class="footer__social-icon" alt="логотип ВКонтакте"> ВКонтакте</a></li>
+              <li class="footer__column-item"><a href="https://instagram.com/" class="footer__column-link"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="логотип Инстаграм"> Instagram</a></li>
           </ul>
         </nav>
 
