Исправил структуру и др ошибки

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a></p>
       <img src="./images/header-image.png" class="header__main-illustration" alt="Опять двойка">
-      <div class="header__square-pic rotation_place_header"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -82,8 +82,8 @@
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
-          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -162,7 +162,7 @@
       </section>
 
       <section class="kaufman">
-        <div class="kaufman__triangle rotation_place_kaufman"></div>
+        <div class="kaufman__triangle rotation"></div>
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
@@ -227,7 +227,7 @@
 
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <p class="footer__author"> &COPY; 2020. Андрей Клонингер</p>
+          <p class="footer__author"> &copy; 2020. Андрей Клонингер</p>
         </div>
 
         <nav class="footer__column footer__column_content_info">
