--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
   <div class="page">
 
     <header class="header">
-      <img src="./images/logo_place_header.svg" class="logo logo_place_header" alt="Логотип ЯндексПрактикум">
+
+      <!-- Юлия, здравствуйте! На какой-то из лекций нам говорили, что не нужно создавать свои классы для тегов, нужно строго следовать брифу,
+         но т.к. вы рекомендуете обернуть лого в ссылку - у нас появляется новый тег. 
+        Информацию о том обязательно ли прописывать всем тегам классы - я не нашёл, поэтому класс прописывать не стал. Но если это является ошибкой,
+      то гипотетически я бы прописал для ссылки лого class="logo__link". 
+      А для пунктов li, которые находятся в блоке video - class="video-frames-item" -->
+      
+      <a href="https://praktikum.yandex.ru/"><img src="./images/logo_place_header.svg" class="logo logo_place_header" alt="Логотип ЯндексПрактикум"></a>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a></p>
       <img src="./images/header-image.png" class="header__main-illustration" alt="Опять двойка">
@@ -24,7 +31,7 @@
     <main class="content">
 
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы 
@@ -37,7 +44,7 @@
               эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p> 
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="techniques">
@@ -46,31 +53,31 @@
         <ul class="cards">
 
           <li class="cards__item">
-            <img src="./images_sprint-2/cards-attention.png" alt="Виды внимания" class="cards__image">
+            <img src="./images/cards-attention.png" alt="Виды внимания" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
 
           <li class="cards__item">
-            <img src="./images_sprint-2/cards-recall.png" alt="Воспоминания" class="cards__image">
+            <img src="./images/cards-recall.png" alt="Воспоминания" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
 
           <li class="cards__item">
-            <img src="./images_sprint-2/cards-interliving.png" alt="Интерливинг" class="cards__image">
+            <img src="./images/cards-interliving.png" alt="Интерливинг" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
 
           <li class="cards__item">
-            <img src="./images_sprint-2/cards-question.png" alt="Вопросы" class="cards__image">
+            <img src="./images/cards-question.png" alt="Вопросы" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
 
           <li class="cards__item">
-            <img src="./images_sprint-2/cards-competence.png" alt="Иллюзия компетентности" class="cards__image">
+            <img src="./images/cards-competence.png" alt="Иллюзия компетентности" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
@@ -81,10 +88,10 @@
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <div class="video__iframes">
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
-        </div>
+        <ul class="video__iframes">
+          <li><iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe></li>
+          <li><iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe></li>
+        </ul>
       </section>
 
       <section class="oakley">
@@ -155,7 +162,7 @@
           <cite class="khan__quote-author">Джордж Лукас</cite>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img src="./images_sprint-2/khan-book.jpg" alt="Книга Весь мир-школа" class="khan__book-pic">
+            <img src="./images/khan-book.jpg" alt="Книга Весь мир-школа" class="khan__book-pic">
             <a href="https://www.ozon.ru/context/detail/id/31700837/" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
@@ -213,10 +220,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img src="./images_sprint-2/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
-          <img src="./images_sprint-2/logo/resources-n1.svg" alt="Н+1" class="resources__logo">
-          <img src="./images_sprint-2/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo">
-          <img src="./images_sprint-2/logo/resources-polka.svg" alt="Полка" class="resources__logo">
+          <img src="./images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
+          <img src="./images/logo/resources-n1.svg" alt="Н+1" class="resources__logo">
+          <img src="./images/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo">
+          <img src="./images/logo/resources-polka.svg" alt="Полка" class="resources__logo">
         </div>
       </section>
 
@@ -233,18 +240,38 @@
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
-              <li class="footer__column-item"><a href="https://praktikum.yandex.ru" class="footer__column-link">Главная</a></li>
-              <li class="footer__column-item"><a href="#" class="footer__column-link">Концепция</a></li>
-              <li class="footer__column-item"><a href="https://praktikum.yandex.ru/promo/mentors-school" class="footer__column-link">Наставники</a></li>
+
+              <li class="footer__column-item">
+                <a href="https://praktikum.yandex.ru" class="footer__column-link">Главная</a>
+              </li>
+
+              <li class="footer__column-item">
+                <a href="#" class="footer__column-link">Концепция</a>
+              </li>
+
+              <li class="footer__column-item">
+                <a href="https://praktikum.yandex.ru/promo/mentors-school" class="footer__column-link">Наставники</a>
+              </li>
           </ul>
         </nav>
             
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
-              <li class="footer__column-item"><a href="https://facebook.com" class="footer__column-link"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="логотип Фэйсбук"> Facebook</a></li>
-              <li class="footer__column-item"><a href="https://vk.com/" class="footer__column-link"><img src="./images/vk_color_white.svg" class="footer__social-icon" alt="логотип ВКонтакте"> ВКонтакте</a></li>
-              <li class="footer__column-item"><a href="https://instagram.com/" class="footer__column-link"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="логотип Инстаграм"> Instagram</a></li>
+              <li class="footer__column-item">
+                <a href="https://facebook.com" class="footer__column-link">
+                  <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="логотип Фэйсбук"> Facebook</a>
+              </li>
+
+              <li class="footer__column-item">
+                <a href="https://vk.com/" class="footer__column-link">
+                  <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="логотип ВКонтакте"> ВКонтакте</a>
+              </li>
+
+              <li class="footer__column-item">
+                <a href="https://instagram.com/" class="footer__column-link">
+                  <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="логотип Инстаграм"> Instagram</a>
+              </li>
           </ul>
         </nav>
 
