--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main class="content">
 
       <section class="description">
-        <article class="two-columns">
+        <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы 
@@ -44,7 +44,7 @@
               эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p> 
           </div>
-        </article>
+        </div>
       </section>
 
       <section class="techniques">
