--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          но т.к. вы рекомендуете обернуть лого в ссылку - у нас появляется новый тег. 
         Информацию о том обязательно ли прописывать всем тегам классы - я не нашёл, поэтому класс прописывать не стал. Но если это является ошибкой,
       то гипотетически я бы прописал для ссылки лого class="logo__link". 
-      А для пунктов li, которые находятся в блоке video - class="video-frames-item" -->
+      А для пунктов li, которые находятся в блоке video - class="video__frames-item" -->
       
       <a href="https://praktikum.yandex.ru/"><img src="./images/logo_place_header.svg" class="logo logo_place_header" alt="Логотип ЯндексПрактикум"></a>
       <h1 class="header__title">Научиться учиться</h1>
